--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "ekutivasolutions/laravel-symlinker",
-  "description": "Create a symbolic link from 'public/storage' to 'storage/app/public' for Laravel 5.2 and under.",
+  "description": "Easy symbolic link from 'public/storage' to 'storage/app/public' for Laravel 5.2 and under.",
   "require": {
     "php": ">=5.5.9",
     "illuminate/support": "5.1.*|5.2.*",
@@ -21,5 +21,6 @@
       "name": "MaizerGomes",
       "email": "maizer.gomes@gmail.com"
     }
-  ]
+  ],
+  "minimum-stability": "dev"
 }
